# text-redaction-benchmark

./: .gitignore  README.md  pyproject.toml
notebooks/: text_redaction_workflow.ipynb
src/text_redaction_benchmark/: __init__.py  cli.py  paddleocr_detector.py  redaction.py  rfdetr_detector.py  schemas.py  video.py
tests/: __init__.py  test_cli.py  test_paddleocr_detector.py  test_redaction.py  test_rfdetr_detector.py  test_video.py
